# Ai_Connect6_cpp

./: .gitignore  Ai_Algorithm_Code.cpp  CMakeLists.txt  Connect6Algo.cpp  Connect6Algo.h  GeneralMain.cpp  GeneralMain.h  GivenMain.cpp  main.cpp
ai/heuristic/: Evaluation.cpp  Evaluation.h  RuleChk.cpp  RuleChk.h
ai/heuristic/JYP/: CountMatches.cpp  CountMatches.h  Evaluation_JYP.cpp  Evaluation_JYP.h  EverySequence.cpp  EverySequence.h
ai/heuristic/onefile/: Evaluation_ONEFILE.cpp  Evaluation_ONEFILE.h
ai/policy/: EffectiveRange.cpp  EffectiveRange.h  FilteredByHeuristic.cpp  FilteredByHeuristic.h  NextStonePairs.cpp  NextStonePairs.h  Sort.cpp  Sort.h
ai/search/: IterativeDeepening.cpp  IterativeDeepening.h  Minimax.cpp  Minimax.h  Node.cpp  Node.h  NodeExtend.cpp  NodeExtend.h
ai/search/domain/: Node.cpp  Node.h  NodeListMap.cpp  NodeListMap.h
ai/utils/: BoardUtils.cpp  BoardUtils.h  StoneUtils.cpp  StoneUtils.h  VectorUtils.cpp  VectorUtils.h
consts/: CONFIG.h  GAME_BOARD.h  SCORE.h
test/: MinimaxTest.cpp  MinimaxTest.h  Samples.cpp  Samples.h  StringSequenceTest.cpp  StringSequenceTest.h
test/utils/: BoardUtils.cpp  BoardUtils.h  FunctionCostUtils.cpp  FunctionCostUtils.h  GameEndTest.cpp  GameEndTest.h  LOG_BY_EACHFUNCTION.h  LogUtils.cpp  LogUtils.h  PrintUtils.cpp  PrintUtils.h  TimeUtils.cpp  TimeUtils.h
